# Neurobotics

./: .dockerignore  .gitignore  90_Second_Video_Script.md  ABC.md  CHATBOT_README.md  Complete_Project_Details.md  Hackathon.md  MODULE.md  NEUROBOTICS_BOOK.txt  RAG.md  RAG_CHAT.md  README.md  YOUTUBE_VIDEO.md  docusaurus.config.js  start-chatbot.sh  vercel.json
book-backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.personalization.yml  docker-compose.yml  init-personalization-db.sql  integrate_security.py  main.py  main_minimal.py  pyproject.toml  pytest.ini  requirements.txt  test_auth_manual.py  validate_auth_system.py
book-backend/alembic/: env.py
book-backend/alembic/versions/: 16cb23c1f120_add_personalization_tables.py  1e99b209d38f_initial_rag_schema.py  add_book_backend_models.py
book-backend/app/: __init__.py  main.py
book-backend/app/api/: __init__.py  dependencies.py
book-backend/app/core/: __init__.py  config.py  database.py  dependencies.py  rate_limiter.py  security.py
book-backend/app/models/: __init__.py  book.py  chat.py  database.py  personalization.py  translation.py  user.py
book-backend/docs/: README.md  api_documentation.md  security.md  setup.md
book-backend/scripts/: ingest.py  ingest_content.py  ingest_neurobotics_book.py  init_db.py  setup_multilingual_dev.py  start_server.py
book-backend/src/: __init__.py
book-backend/src/api/: chat.py  (+3 more)
book-backend/tests/: conftest.py  run_auth_tests.py  test_multilingual.py  test_multilingual_system.py  test_personalization.py
(+333 files in other folders)
